--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== README
+== README RCO ==
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
@@ -6,6 +6,7 @@ application up and running.
 Things you may want to cover:
 
 * Ruby version
+2.1
 
 * System dependencies
 
