--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== README BY RCO(DESENVOLVIMENTO) ==
+== README BY RCO(MASTER) ==
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
