--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== README BY RCO(MASTER) ==
+== README BY RCO[MASTER] 
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
@@ -10,7 +10,7 @@ Things you may want to cover:
 
 * System dependencies
   gtk by RCO
-x
+  
 * Configuration
 
 * Database creation
